# aurora

./: .gitignore  Dockerfile  README.md  biome.json  build-wasm-bindings.sh  docker-compose.yaml  index.html  package.json  tsconfig.json  ubrn.config.yaml  vite.config.ts
.github/workflows/: pull_request.yaml  sync-upstream.yml
patches/: 0001-Downgrade-uniffi-to-0.29.4.patch  0001-Fix-uniffi-and-wasm-build.patch  0001-Fix-wasm-default-features.patch
public/: sw.js
src/: App.css  App.tsx  Client.tsx  ClientStore.tsx  Composer.tsx  ConfirmIdentityScreen.module.css  ConfirmIdentityScreen.tsx  DiffUtils.ts  EnablingRecoveryScreen.module.css  EnablingRecoveryScreen.tsx  Encryption.module.css  Encryption.tsx  EventTile.tsx  Filter.ts  Login.tsx  NotificationDecoration.css  NotificationDecoration.tsx  OidcCallback.tsx  OidcLoginScreen.tsx  RecoveryCompleteScreen.tsx  RecoveryKeyEntryScreen.module.css  RecoveryKeyEntryScreen.tsx  ResetIdentityPasswordScreen.module.css  ResetIdentityPasswordScreen.tsx  ResetIdentityWarningScreen.module.css  ResetIdentityWarningScreen.tsx  RoomHeaderView.css  RoomHeaderView.tsx  RoomListFiltersView.css  RoomListFiltersView.tsx  RoomListHeaderView.css  RoomListHeaderView.tsx  RoomListItemView.css  RoomListItemView.tsx  RoomListStore.tsx  RoomListView.css  RoomListView.tsx  RoomSearchView.css  RoomSearchView.tsx  RoomView.tsx  (+22 more)
src-tauri/: Cargo.toml  tauri.conf.json
src/LoadingScreen/: LoadingScreen.tsx
src/MemberList/: BaseAvatar.tsx  BaseCard.css  BaseCard.tsx  MemberList.css  MemberListHeaderView.tsx  MemberListStore.tsx  MemberListView.tsx
src/MemberList/tiles/: RoomMemberTileView.tsx
src/MemberList/tiles/common/: InvitedIconView.tsx  MemberTileView.css  MemberTileView.tsx
src/RoomList/: RoomListHeader.tsx  RoomListHeaderViewModel.ts  RoomListSearch.tsx  RoomListSearchViewModel.ts  index.ts
src/context/: ClientStoreContext.ts  ClientStoresContext.ts  SessionStoreContext.ts
src/utils/: ButtonEvent.tsx  Flex.css  Flex.tsx  UnstableValue.ts  clearIndexedDBData.ts  clientBuilder.ts  i18nApi.ts  numbers.ts
src/viewmodel/: ClientViewModel.ts  EncryptionViewModel.ts  LoginViewModel.ts  MemberListViewModel.ts  RoomListItemViewModel.ts  RoomListViewModel.ts  RoomSummary.ts  RoomViewModel.ts  TimelineViewModel.ts  client-view.types.ts  credentials.types.ts  encryption-view.types.ts  login-view.types.ts  member-list-view.types.ts  room-list-item-view.types.ts  room-list-view.types.ts  room-view.types.ts  timeline-view.types.ts
