[package]
name = "aurora"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
# eyeball = { path="../../eyeball/eyeball-im", features = ["tracing"] }
# eyeball-im = { path="../../eyeball/eyeball-im", features = ["tracing", "serde"] }
# eyeball-im-util = { path="../../eyeball/eyeball-im-util" }
#
# ruma = { path="../../ruma/crates/ruma" }
# ruma-common = { path="../../ruma/crates/ruma-common" }
#
# matrix-sdk = { path = "../../matrix-rust-sdk/crates/matrix-sdk", version = "0.7.0", features = ["experimental-sliding-sync", "serde"] }
# matrix-sdk-ui = { path = "../../matrix-rust-sdk/crates/matrix-sdk-ui",  version = "0.7.0", features = ["serde"] }
# matrix-sdk-sqlite = { path = "../../matrix-rust-sdk/crates/matrix-sdk-sqlite", version = "0.7.0" }

eyeball = { git = "https://github.com/jplatte/eyeball.git", rev="71e0a72adc377584da78fb4c1b3ad9714a7287f4", features = ["tracing"] }
eyeball-im = { git = "https://github.com/jplatte/eyeball.git", rev="71e0a72adc377584da78fb4c1b3ad9714a7287f4", features = ["tracing", "serde"] }
eyeball-im-util = { git = "https://github.com/jplatte/eyeball.git", rev="71e0a72adc377584da78fb4c1b3ad9714a7287f4" }

ruma = { git = "https://github.com/ara4n/ruma.git", rev = "7f706bc7df5da887756564d711d2d5a062c3451d" }
ruma-common = { git = "https://github.com/ara4n/ruma.git", package="ruma-common", rev = "7f706bc7df5da887756564d711d2d5a062c3451d" }

matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk.git", rev = "bf5aeb8a69498499cccd595b3a0e4290c3a78642", features = ["experimental-sliding-sync", "serde"] }
matrix-sdk-ui = { git = "https://github.com/matrix-org/matrix-rust-sdk.git", rev = "bf5aeb8a69498499cccd595b3a0e4290c3a78642", features = ["serde"] }
matrix-sdk-sqlite = { git = "https://github.com/matrix-org/matrix-rust-sdk.git", rev = "bf5aeb8a69498499cccd595b3a0e4290c3a78642" }

futures = "0.3.28"
futures-core = "0.3.28"
futures-executor = "0.3.21"
futures-util = { version = "0.3.26", default-features = false, features = ["alloc"] }
tauri = { version = "1.5", features = [ "window-hide", "window-unmaximize", "window-minimize", "window-maximize", "window-unminimize", "window-show", "window-close", "window-start-dragging", "shell-open"] }
imbl = { version = "2.0.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = { version = "0.1.40", default-features = false, features = ["std"] }
tracing-core = "0.1.32"
tracing-subscriber = "0.3.18"
thiserror = "1.0.57"
url = "2.5.0"
anyhow = "1.0.79"
time = "0.3.35"

[target.'cfg(windows)'.dependencies]
matrix-sdk-sqlite = { git = "https://github.com/matrix-org/matrix-rust-sdk.git", rev = "bf5aeb8a69498499cccd595b3a0e4290c3a78642", features = ["bundled"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
